<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/clMain"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/app_background">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/rlFooter">

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ivLogo"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/logo_height"
                    android:layout_margin="@dimen/activity_margin"
                    android:src="@drawable/is_dental_logo"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <EditText
                        android:id="@+id/etName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/activity_margin_small"
                        android:layout_marginLeft="@dimen/activity_margin"
                        android:layout_marginRight="@dimen/activity_margin"
                        android:layout_marginTop="@dimen/activity_margin_small"
                        android:background="@drawable/edit_text_background"
                        android:hint="@string/activity_login_hint_full_name"
                        android:padding="@dimen/edittext_padding"
                        android:textSize="@dimen/text_size_large"/>

                    <EditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/activity_margin_small"
                        android:layout_marginLeft="@dimen/activity_margin"
                        android:layout_marginRight="@dimen/activity_margin"
                        android:layout_marginTop="@dimen/activity_margin_small"
                        android:background="@drawable/edit_text_background"
                        android:hint="@string/activity_login_hint_email"
                        android:inputType="textEmailAddress"
                        android:padding="@dimen/edittext_padding"
                        android:textSize="@dimen/text_size_large"/>

                    <EditText
                        android:id="@+id/etMobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/activity_margin_small"
                        android:layout_marginLeft="@dimen/activity_margin"
                        android:layout_marginRight="@dimen/activity_margin"
                        android:layout_marginTop="@dimen/activity_margin_small"
                        android:background="@drawable/edit_text_background"
                        android:hint="@string/activity_login_hint_mobile"
                        android:inputType="number"
                        android:maxLength="10"
                        android:padding="@dimen/edittext_padding"
                        android:textSize="@dimen/text_size_large"/>

                    <Spinner
                        android:id="@+id/spType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/activity_margin_small"
                        android:layout_marginLeft="@dimen/activity_margin"
                        android:layout_marginRight="@dimen/activity_margin"
                        android:layout_marginTop="@dimen/activity_margin_small"
                        android:background="@drawable/edit_text_background"
                        android:hint="Type"
                        android:padding="@dimen/edittext_padding"
                        android:spinnerMode="dialog"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/activity_margin_small"
                        android:layout_marginLeft="@dimen/activity_margin"
                        android:layout_marginRight="@dimen/activity_margin"
                        android:layout_marginTop="@dimen/activity_margin_small"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/cbTerm"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"/>


                        <TextView
                            android:id="@+id/tvTermConditions"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toEndOf="@+id/cbTerm"
                            android:layout_toRightOf="@+id/cbTerm"/>
                    </RelativeLayout>


                </LinearLayout>


                <TextView
                    android:id="@+id/tvSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_margin_small"
                    android:layout_marginLeft="@dimen/activity_margin"
                    android:layout_marginRight="@dimen/activity_margin"
                    android:layout_marginTop="@dimen/activity_margin_small"
                    android:background="@drawable/button_bg"
                    android:elevation="@dimen/button_elevation"
                    android:gravity="center"
                    android:padding="@dimen/activity_margin"
                    android:text="@string/activity_login_button_submit"
                    android:textColor="@color/text_color_white"
                    android:textSize="@dimen/text_size_extra_large"/>


            </LinearLayout>
        </ScrollView>
        <RelativeLayout
            android:id="@+id/rlFooter"
            android:layout_width="match_parent"
            android:layout_height="@dimen/indiasupply_logo_height"
            android:layout_alignParentBottom="true">

            <ImageView
                android:id="@+id/ivIndiaSupplyLogo"
                android:layout_width="@dimen/indiasupply_logo_width"
                android:layout_height="@dimen/indiasupply_logo_height"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="@dimen/activity_margin_small"
                android:layout_marginLeft="@dimen/activity_margin_small"
                android:layout_marginRight="@dimen/activity_margin_small"
                android:layout_marginStart="@dimen/activity_margin_small"
                android:contentDescription="@string/app_name"
                android:src="@drawable/indiasupply_logo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/ivIndiaSupplyLogo"
                android:layout_marginBottom="@dimen/activity_margin_small"
                android:layout_toLeftOf="@+id/ivIndiaSupplyLogo"
                android:layout_toStartOf="@+id/ivIndiaSupplyLogo"
                android:text="@string/activity_main_text_powered_by"
                android:textColor="@color/app_text_color_dark"
                android:textSize="@dimen/text_size_small"
                android:textStyle="italic"/>
        </RelativeLayout>
    </RelativeLayout>


</android.support.design.widget.CoordinatorLayout>