<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/clMain"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/app_background">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:titleEnabled="false">
            <com.daimajia.slider.library.SliderLayout
                android:id="@+id/slider"
                android:layout_width="match_parent"
                android:layout_height="@dimen/home_slider_height"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_gravity="bottom"
                android:layout_marginTop="?attr/actionBarSize"
                android:background="@color/text_color_white"
                android:scaleType="centerCrop"
                android:visibility="gone"
                app:auto_cycle="true"
                app:indicator_visibility="invisible"
                app:layout_collapseMode="parallax"
                app:pager_animation="Accordion"
                app:pager_animation_span="500"/>
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/primary"
                app:contentInsetEnd="0dp"
                app:contentInsetLeft="0dp"
                app:contentInsetRight="0dp"
                app:contentInsetStart="0dp"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
                <RelativeLayout
                    android:id="@+id/toolbar_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <RelativeLayout
                        android:id="@+id/rlBack"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">
                        <ImageView
                            android:id="@+id/ivBack"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_back"
                            android:visibility="visible"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_toEndOf="@+id/ivBack"
                            android:layout_toRightOf="@+id/ivBack"
                            android:gravity="center_vertical"
                            android:text="@string/activity_brand_list_back_button"
                            android:textColor="@color/text_color_white"
                            android:textSize="@dimen/text_size_large"/>
                    </RelativeLayout>
                    <TextView
                        android:id="@+id/tvType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:text="@string/activity_brand_list_title"
                        android:textColor="@color/text_color_white"
                        android:textSize="@dimen/text_size_large"
                        android:textStyle="bold"/>
                    <android.support.v7.widget.SearchView
                        android:id="@+id/searchView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:gravity="end"
                        android:searchIcon="@drawable/ic_search"/>
                    <ImageView
                        android:id="@+id/ivFilter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@+id/searchView"
                        android:layout_toStartOf="@+id/searchView"
                        android:paddingBottom="@dimen/activity_margin_small"
                        android:paddingTop="@dimen/activity_margin_small"
                        android:src="@drawable/ic_filter"
                        android:visibility="gone"/>
                    <ImageView
                        android:id="@+id/ivSort"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@+id/ivFilter"
                        android:layout_toStartOf="@+id/ivFilter"
                        android:paddingBottom="@dimen/activity_margin_small"
                        android:paddingEnd="@dimen/activity_margin_small"
                        android:paddingLeft="0dp"
                        android:paddingRight="@dimen/activity_margin_small"
                        android:paddingStart="0dp"
                        android:paddingTop="@dimen/activity_margin_small"
                        android:src="@drawable/ic_sort"
                        android:visibility="gone"/>
                </RelativeLayout>
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefreshLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/rvCategory">
            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvBrandList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:fillViewport="true"
                android:overScrollMode="never"
                android:scrollbarStyle="insideOverlay"/>
        </android.support.v4.widget.SwipeRefreshLayout>


    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <RelativeLayout
            android:id="@+id/rlInit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:animateLayoutChanges="true">
            <TextView
                android:id="@+id/tvNoResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:padding="@dimen/edittext_padding"
                android:text="@string/activity_exhibitor_list_text_no_exhibitor_found"
                android:textSize="@dimen/text_size_large"
                android:visibility="gone"/>
        </RelativeLayout>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>